--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-dom": "^18",
     "react-icons": "^4.8.0",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "web-vitals": "^3.3.1"
   },
   "scripts": {
